--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.78</version>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.16.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
